# dNEARo

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package.json
scripts/: app.test.js  config.js  hoist-credentials.js  legacy-test.js  near-utils.js  patch-config.js  sanity-check.js  sanity-check2.js  test-utils.js
src/: bonk.rs  get.rs  grab.rs  lib.rs  out.rs  pledge.rs  pool.rs  utils.rs
