[package]
name = "quid"
version = "1.0.0"
authors = ["Johnny Quid <john@quid.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
libm = "0.2.1"
uint = { version = "0.9.2", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
# =4.0.0-pre.7